--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.0",
     "@prisma/client": "^4.6.1",
-    "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query": "^4.17.1",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -40,14 +40,14 @@
     "graphql-request": "^5.0.0",
     "jotai": "^1.10.0",
     "jsonwebtoken": "^8.5.1",
-    "next": "13.0.3",
-    "next-i18next": "^12.1.0",
+    "next": "13.0.5",
+    "next-i18next": "^13.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.4",
+    "react-hook-form": "^7.39.5",
     "react-intersection-observer": "^9.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.11",
@@ -58,29 +58,29 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@faker-js/faker": "^7.6.0",
-    "@graphql-codegen/cli": "2.13.12",
-    "@graphql-codegen/client-preset": "1.1.4",
+    "@graphql-codegen/cli": "2.14.1",
+    "@graphql-codegen/client-preset": "1.1.5",
     "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typed-document-node": "^2.3.7",
     "@graphql-codegen/typescript": "2.8.2",
     "@graphql-codegen/typescript-operations": "^2.5.7",
-    "@graphql-codegen/typescript-react-query": "^4.0.5",
+    "@graphql-codegen/typescript-react-query": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "2.7.7",
     "@jest/types": "^29.3.1",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.2.0",
-    "@nrwl/cli": "15.1.1",
-    "@nrwl/cypress": "15.1.1",
-    "@nrwl/eslint-plugin-nx": "15.1.1",
-    "@nrwl/jest": "15.1.1",
-    "@nrwl/linter": "15.1.1",
-    "@nrwl/nest": "15.1.1",
-    "@nrwl/next": "15.1.1",
-    "@nrwl/node": "15.1.1",
+    "@nrwl/cli": "15.2.1",
+    "@nrwl/cypress": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/jest": "15.2.1",
+    "@nrwl/linter": "15.2.1",
+    "@nrwl/nest": "15.2.1",
+    "@nrwl/next": "15.2.1",
+    "@nrwl/node": "15.2.1",
     "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/react": "15.1.1",
-    "@nrwl/web": "15.1.1",
-    "@nrwl/workspace": "15.1.1",
+    "@nrwl/react": "15.2.1",
+    "@nrwl/web": "15.2.1",
+    "@nrwl/workspace": "15.2.1",
     "@svgr/webpack": "^6.5.1",
     "@tanstack/eslint-plugin-query": "^4.15.1",
     "@testing-library/react": "13.4.0",
@@ -93,31 +93,33 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
     "autoprefixer": "^10.4.13",
     "babel-jest": "29.3.1",
-    "cypress": "^11.1.0",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "cypress": "^11.2.0",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "7.31.10",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "express": "^4.18.2",
     "graphql-tag": "^2.12.6",
+    "i18next": "^22.0.6",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
-    "nx": "15.1.1",
+    "nx": "15.2.1",
     "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prettier": "^2.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.0",
     "prisma": "^4.6.1",
+    "react-i18next": "^12.0.0",
     "react-test-renderer": "18.2.0",
     "readme-package-icons": "^1.1.7",
     "stylus": "^0.59.0",
