--- a/libs/graphql/artifacts/project.json
+++ b/libs/graphql/artifacts/project.json
@@ -8,7 +8,7 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/graphql/artifacts/src/custom-types/**/*.ts"]
+        "lintFilePatterns": ["libs/graphql/artifacts/src/*.ts"]
       }
     },
     "type-check": {
