--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prisma-seed": "prisma db seed",
     "sync-api": "pnpm nx fetch graphql-codegen-lib",
     "sync-icons": "generateReadmeIcons",
-    "codegen": "rm -rf libs/graphql/artifacts/src/api && gqlCodegen -c ./libs/graphql/codegen/src/react-query-codegen.yml"
+    "codegen-init": "gqlCodegen-init -c ./libs/graphql/codegen/src -o libs/graphql/artifacts/src/api -u NEXT_PUBLIC_GQL_API_URL",
+    "codegen": "rm -rf libs/graphql/artifacts/src/api/codegen && gqlCodegen -c ./libs/graphql/codegen/src/react-query.codegen.yml"
   },
   "private": true,
   "dependencies": {
@@ -30,65 +31,66 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@prisma/client": "^4.9.0",
-    "@tanstack/react-query": "^4.22.0",
+    "@tanstack/react-query": "^4.24.4",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "core-js": "^3.27.2",
     "date-fns": "^2.29.3",
+    "dotenv-flow": "^3.2.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
-    "jotai": "^1.13.1",
+    "jotai": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.1.2",
+    "next": "13.1.6",
     "next-i18next": "^13.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.42.1",
+    "react-hook-form": "^7.43.0",
     "react-intersection-observer": "^9.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.11",
     "rxjs": "^7.8.0",
-    "tslib": "^2.4.1",
+    "tslib": "^2.5.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-react": "^7.14.5",
     "@faker-js/faker": "^7.6.0",
-    "@graphql-codegen/cli": "2.16.4",
-    "@graphql-codegen/client-preset": "1.2.6",
+    "@graphql-codegen/cli": "2.16.5",
+    "@graphql-codegen/client-preset": "1.3.0",
     "@graphql-codegen/introspection": "2.2.3",
-    "@graphql-codegen/typed-document-node": "^2.3.12",
-    "@graphql-codegen/typescript": "2.8.7",
-    "@graphql-codegen/typescript-operations": "^2.5.12",
+    "@graphql-codegen/typed-document-node": "^2.3.13",
+    "@graphql-codegen/typescript": "2.8.8",
+    "@graphql-codegen/typescript-operations": "^2.5.13",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
-    "@graphql-codegen/typescript-resolvers": "2.7.12",
-    "@jest/types": "^29.3.1",
+    "@graphql-codegen/typescript-resolvers": "2.7.13",
+    "@jest/types": "^29.4.1",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.2.1",
-    "@nrwl/cli": "15.5.2",
-    "@nrwl/cypress": "15.5.2",
-    "@nrwl/eslint-plugin-nx": "15.5.2",
-    "@nrwl/jest": "15.5.2",
-    "@nrwl/linter": "15.5.2",
-    "@nrwl/nest": "15.5.2",
-    "@nrwl/next": "15.5.2",
-    "@nrwl/node": "15.5.2",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/react": "15.5.2",
-    "@nrwl/web": "15.5.2",
-    "@nrwl/workspace": "15.5.2",
+    "@nrwl/cli": "15.6.3",
+    "@nrwl/cypress": "15.6.3",
+    "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/jest": "15.6.3",
+    "@nrwl/linter": "15.6.3",
+    "@nrwl/nest": "15.6.3",
+    "@nrwl/next": "15.6.3",
+    "@nrwl/node": "15.6.3",
+    "@nrwl/nx-cloud": "15.0.3",
+    "@nrwl/react": "15.6.3",
+    "@nrwl/web": "15.6.3",
+    "@nrwl/workspace": "15.6.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.1.2",
-    "@tanstack/eslint-plugin-query": "^4.21.0",
+    "@tanstack/eslint-plugin-query": "^4.24.0",
     "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "29.2.6",
+    "@types/jest": "29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
@@ -96,15 +98,15 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
     "autoprefixer": "10.4.13",
-    "babel-jest": "29.3.1",
+    "babel-jest": "29.4.1",
     "cosmiconfig-toml-loader": "^1.0.0",
     "css-loader": "^6.7.3",
-    "cypress": "^12.2.0",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
+    "cypress": "^12.4.1",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.27.5",
@@ -112,23 +114,23 @@
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "7.32.1",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "express": "^4.18.2",
-    "graphql-codegen-react-query": "^1.0.6",
+    "graphql-codegen-react-query": "^1.0.9",
     "graphql-tag": "^2.12.6",
     "i18next": "^22.4.9",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "nx": "15.5.2",
+    "jest": "29.4.1",
+    "jest-environment-jsdom": "29.4.1",
+    "nx": "15.6.3",
     "postcss": "8.4.21",
     "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.9.0",
     "react-i18next": "^12.1.4",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "18.2.0",
-    "readme-package-icons": "^1.1.7",
+    "readme-package-icons": "^1.1.8",
     "style-loader": "^3.3.0",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
@@ -136,7 +138,7 @@
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "ts-toolbelt": "^9.6.0",
-    "typescript": "4.9.4",
+    "typescript": "4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-merge": "^5.8.0"
