--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "author": "jpb06 <jpb.06@outlook.com>",
   "license": "MIT",
   "scripts": {
+    "postinstall": "pnpm prisma-gen",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "dev": "nx run-many --target=serve --projects=front-shop-app,back-api-app",
+    "dev": "nx run-many --target=serve --projects=front-shop-app,back-api-app --skip-nx-cache",
     "docker-db": "docker-compose -f apps/api/docker-compose.yml down && docker-compose -f apps/api/docker-compose.yml up shop-postgres",
     "docker-db-seed": "pnpm prisma-migrate dev && pnpm prisma-seed",
     "prisma-gen": "prisma generate --schema libs/backend/database/model/schema.prisma",
@@ -16,20 +17,22 @@
     "prisma-seed": "prisma db seed",
     "sync-api": "pnpm nx fetch graphql-codegen-lib",
     "sync-icons": "generateReadmeIcons",
-    "codegen-init": "gqlCodegen-init -c ./libs/graphql/codegen/src -o libs/graphql/artifacts/src/api -u NEXT_PUBLIC_GQL_API_URL",
-    "codegen": "rm -rf libs/graphql/artifacts/src/api/codegen && gqlCodegen -c ./libs/graphql/codegen/src/react-query.codegen.yml"
+    "codegen-init": "gqlCodegen-init -c ./libs/graphql/codegen -o libs/graphql/codegen/src -u NEXT_PUBLIC_GQL_API_URL",
+    "precodegen": "rm -rf libs/graphql/codegen/src/artifacts",
+    "codegen": "gqlCodegen -c ./libs/graphql/codegen/react-query.codegen.yml",
+    "postcodegen": "pnpm nx lint graphql-codegen-lib --fix"
   },
   "private": true,
   "dependencies": {
     "@graphql-typed-document-node/core": "^3.1.1",
     "@hookform/resolvers": "^2.9.10",
     "@nestjs/apollo": "^10.1.7",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/core": "^9.2.1",
+    "@nestjs/common": "^9.3.1",
+    "@nestjs/core": "^9.3.1",
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/passport": "^9.0.1",
+    "@nestjs/platform-express": "^9.3.1",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.24.4",
     "apollo-server-express": "^3.11.1",
@@ -44,7 +47,7 @@
     "jotai": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
-    "next-i18next": "^13.0.3",
+    "next-i18next": "^13.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -62,17 +65,9 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-react": "^7.14.5",
     "@faker-js/faker": "^7.6.0",
-    "@graphql-codegen/cli": "2.16.5",
-    "@graphql-codegen/client-preset": "1.3.0",
-    "@graphql-codegen/introspection": "2.2.3",
-    "@graphql-codegen/typed-document-node": "^2.3.13",
-    "@graphql-codegen/typescript": "2.8.8",
-    "@graphql-codegen/typescript-operations": "^2.5.13",
-    "@graphql-codegen/typescript-react-query": "^4.1.0",
-    "@graphql-codegen/typescript-resolvers": "2.7.13",
     "@jest/types": "^29.4.1",
     "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/testing": "^9.3.1",
     "@nrwl/cli": "15.6.3",
     "@nrwl/cypress": "15.6.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
@@ -104,7 +99,7 @@
     "babel-jest": "29.4.1",
     "cosmiconfig-toml-loader": "^1.0.0",
     "css-loader": "^6.7.3",
-    "cypress": "^12.4.1",
+    "cypress": "^12.5.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "8.6.0",
@@ -117,7 +112,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "express": "^4.18.2",
-    "graphql-codegen-react-query": "^1.0.9",
+    "graphql-codegen-react-query": "^1.0.10",
     "graphql-tag": "^2.12.6",
     "i18next": "^22.4.9",
     "jest": "29.4.1",
