--- a/Dockerfile-Api
+++ b/Dockerfile-Api
@@ -15,6 +15,7 @@ RUN mkdir /app
 WORKDIR /app
 
 ADD ./package.json ./pnpm-lock.yaml ./
+ADD ./libs/backend/database/model/schema.prisma ./libs/backend/database/model/schema.prisma
 RUN pnpm i --prod=false
 
 # Build the app
@@ -26,8 +27,6 @@ WORKDIR /app
 COPY --from=deps /app/node_modules /app/node_modules
 ADD . .
 
-RUN pnpm prisma-gen
-ADD ./libs/backend/database/model .
 RUN NX_DAEMON=false pnpm nx run back-api-app:build:production
 
 # Finally, build the production image with minimal footprint
