--- a/.github/workflows/tests-scan.yml
+++ b/.github/workflows/tests-scan.yml
@@ -10,31 +10,30 @@ on:
   pull_request:
     types: [opened, ready_for_review, synchronize, converted_to_draft]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   tests:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.11.0
-        with:
-          access_token: ${{ github.token }}
-
       - name: Check out repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
 
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
-        uses: nrwl/nx-set-shas@v2.0.2
+        uses: nrwl/nx-set-shas@v4.3.0
         with:
           main-branch-name: main
 
       - uses: pnpm/action-setup@v4.1.0
 
       - name: Setup node
-        uses: actions/setup-node@v3.5.1
+        uses: actions/setup-node@v4.4.0
         with:
           node-version-file: '.node-version'
           cache: 'pnpm'
@@ -101,12 +100,10 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - uses: pnpm/action-setup@v2.2.4
-        with:
-          version: latest
+      - uses: pnpm/action-setup@v4.1.0
 
       - name: Setup node
-        uses: actions/setup-node@v3.5.1
+        uses: actions/setup-node@v4.4.0
         with:
           node-version-file: '.node-version'
           cache: 'pnpm'
